--- a/WinSkin/WinSkin.xaml
+++ b/WinSkin/WinSkin.xaml
@@ -158,6 +158,13 @@
                             </MultiTrigger.Conditions>
                             <Setter TargetName="ResizeGrip" Property="Visibility" Value="Visible" />
                         </MultiTrigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="WindowState" Value="Maximized" />
+                                <Condition Property="BorderThickness" Value="1" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Padding" Value="7" />
+                        </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
