--- a/WinSkin.Demo/App.xaml
+++ b/WinSkin.Demo/App.xaml
@@ -8,7 +8,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/WinSkin;component/WinSkin.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/WinSkin;component/Themes/WinSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
