--- a/WinSkin.Demo/MainWindow.xaml
+++ b/WinSkin.Demo/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿<WinSkin:WinSkinWindow
+﻿<WinSkin:UiWindow
     x:Class="WinSkin.Demo.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:WinSkin="clr-namespace:WinSkin;assembly=WinSkin"
+    xmlns:WinSkin="clr-namespace:WinSkin.Controls;assembly=WinSkin"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WinSkin.Demo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,12 +11,14 @@
     Height="450"
     BorderBrush="Gray"
     BorderThickness="1"
+    CaptionHeight="40"
     Style="{StaticResource WinSkinWindowStyle}"
     SystemButtonCloseOverColor="Red"
     SystemButtonColor="{StaticResource TransparentColor}"
     SystemButtonForeground="#666666"
     SystemButtonOverColor="#10000000"
-    SystemButtonSize="32"
+    SystemButtonSize="40"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
 
     <Window.Resources>
@@ -26,7 +28,7 @@
     </Window.Resources>
 
     <!--  左侧标题区域  -->
-    <WinSkin:WinSkinWindow.TitleContent>
+    <WinSkin:UiWindow.TitleContent>
         <Grid Background="Green">
             <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
                 <TextBlock
@@ -42,7 +44,7 @@
                     Text="Skin" />
             </StackPanel>
         </Grid>
-    </WinSkin:WinSkinWindow.TitleContent>
+    </WinSkin:UiWindow.TitleContent>
 
     <Grid>
         <TextBlock
@@ -65,6 +67,47 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             Text="测试文本" />
+
+        <ScrollViewer
+            Width="200"
+            Height="200"
+            Style="{StaticResource WinScrollViewer}">
+            <StackPanel>
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+                <Button
+                    Width="220"
+                    Height="50"
+                    Content="Button" />
+            </StackPanel>
+        </ScrollViewer>
+
     </Grid>
 
-</WinSkin:WinSkinWindow>
+</WinSkin:UiWindow>
